# VehicleDetection

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md
Rendering/: CMakeLists.txt  camera.cpp  camera.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  videoitem.cpp  videoitem.h  videoscene.h
cmake/: DownloadOCV.cmake
